--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,21 @@ authors = ["Page Fault <p4gefau1t@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-bytes = "1.0"
-tokio = {version = "1.6", features = ["rt", "net", "io-util", "rt-multi-thread", "sync", "macros"]}
-tokio-rustls = "0.22"
+bytes = "1.1"
+tokio = {version = "1.19", features = ["rt", "net", "io-util", "rt-multi-thread", "sync", "macros"]}
+tokio-rustls = "0.23"
+rustls-pemfile = "1.0.0"
+
 log = "0.4"
 async-trait = "0.1"
-sha2 = "0.9"
+sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] } 
-env_logger = "0.8"
-toml = "0.5"
-clap = "2.33"
-webpki = "0.21"
-webpki-roots = "0.21"
-tokio-tungstenite = "0.14"
+env_logger = "0.9"
+toml = "0.5.9"
+clap = "3.1"
+webpki = "0.22"
+webpki-roots = "0.22.3"
+tokio-tungstenite = "0.17"
 futures-core = "0.3"
 futures-util = "0.3"
 
